feat(workflow): Update build jobs to use fromJSON in if conditions

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -18,14 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       test_packages: ${{ steps.get_vars.outputs.test_packages }}
-      run_windows_bundle: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'windows-bundle') }}
-      run_macos_bundle: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'macos-bundle') }}
-      run_linux_bundle: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'linux-bundle') }}
-      run_debian_package: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'debian-package') }}
-      run_linux_wheel: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'linux-wheel') }}
-      run_rpm_package: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'rpm-package') }}
-      run_windows_wheel: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'windows-wheel') }}
-      run_macos_wheel: ${{ contains(fromJSON(steps.get_vars.outputs.test_packages), 'all') || contains(fromJSON(steps.get_vars.outputs.test_packages), 'macos-wheel') }}
     steps:
       - id: get_vars
         run: echo "test_packages=\"${{ vars.TEST_PACKAGES || '[\\"all\\\"]' }}\"" >> $GITHUB_OUTPUT
@@ -35,7 +27,7 @@ jobs:
     needs: setup
     name: Build Linux Wheel
     runs-on: ubuntu-latest
-    if: ${{ needs.setup.outputs.run_linux_wheel == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'linux-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -86,7 +78,7 @@ jobs:
     needs: setup
     name: Build macOS Wheel
     runs-on: macos-latest
-    if: ${{ needs.setup.outputs.run_macos_wheel == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'macos-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -119,7 +111,7 @@ jobs:
     needs: setup
     name: Build Windows Wheel
     runs-on: windows-latest
-    if: ${{ needs.setup.outputs.run_windows_wheel == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'windows-wheel') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -149,7 +141,7 @@ jobs:
     needs: setup
     name: Build Debian Package
     runs-on: ubuntu-22.04
-    if: ${{ needs.setup.outputs.run_debian_package == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'debian-package') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -193,13 +185,8 @@ jobs:
     needs: setup
     name: Build Windows Bundle
     runs-on: windows-latest
-    if: ${{ needs.setup.outputs.run_windows_bundle == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'windows-bundle') }}
     steps:
-      - name: Debug if condition
-        run: |
-          echo "test_packages: ${{ needs.setup.outputs.test_packages }}"
-          echo "contains all: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') }}"
-          echo "contains windows-bundle: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'windows-bundle') }}"
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up Python
@@ -234,7 +221,7 @@ jobs:
     needs: setup
     name: Build macOS Bundle
     runs-on: macos-latest
-    if: ${{ needs.setup.outputs.run_macos_bundle == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'macos-bundle') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -270,7 +257,7 @@ jobs:
     needs: setup
     name: Build Linux Bundle
     runs-on: ubuntu-latest
-    if: ${{ needs.setup.outputs.run_linux_bundle == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'linux-bundle') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -395,7 +382,7 @@ jobs:
     needs: setup
     name: Build RPM Package
     runs-on: ubuntu-latest
-    if: ${{ needs.setup.outputs.run_rpm_package == 'true' }}
+    if: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'rpm-package') }}
     container:
       image: fedora:latest
     steps:
