--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -9,8 +9,8 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-      - id: get_vars
-        run: echo "test_packages=\"${{ vars.TEST_PACKAGES || '[\\"all\\\"]' }}\"" >> $GITHUB_OUTPUT
+    outputs:
+      test_packages: ${{ steps.get_vars.outputs.test_packages }}
     steps:
       - id: get_vars
         run: echo "test_packages=\"${{ vars.TEST_PACKAGES || '[\\"all\\\"]' }}\"" >> $GITHUB_OUTPUT
@@ -21,11 +21,6 @@ jobs:
     runs-on: windows-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' && (contains(fromJSON(needs.setup.outputs.test_packages), 'all') || contains(fromJSON(needs.setup.outputs.test_packages), 'windows-bundle')) }}
     steps:
-      - name: Debug
-        run: |
-          echo "test_packages: ${{ needs.setup.outputs.test_packages }}"
-          echo "contains all: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'all') }}"
-          echo "contains windows-bundle: ${{ contains(fromJSON(needs.setup.outputs.test_packages), 'windows-bundle') }}"
       - name: Download Windows artifact
         uses: actions/download-artifact@v4
         with:
