fix(workflow): Install dependencies from requirements.txt in all PyInstaller jobs

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -245,6 +245,7 @@ jobs:
           poetry self add poetry-plugin-export
           poetry lock
           poetry export -f requirements.txt --output requirements.tmp && grep -v "wxPython" requirements.tmp > requirements.txt && rm requirements.tmp
+          pip install -r requirements.txt
           pip install pyinstaller
       - name: Build Package
         run: pyinstaller --log-level=DEBUG packaging/pyinstaller/specs/devildex_macos.spec --distpath dist/macos-latest
@@ -293,6 +294,7 @@ jobs:
           poetry self add poetry-plugin-export
           poetry lock
           poetry export -f requirements.txt --output requirements.tmp && grep -v "wxPython" requirements.tmp > requirements.txt && rm requirements.tmp
+          pip install -r requirements.txt
           pip install pyinstaller
       - name: Build Package
         run: pyinstaller --log-level=DEBUG packaging/pyinstaller/specs/devildex_linux.spec --distpath dist/ubuntu-latest
