--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -289,6 +289,8 @@ jobs:
             python3-gi-cairo \
             python3-wxgtk4.0 \
             python3-wxgtk-webview4.0
+      - name: Install wxPython
+        run: pip install wxpython==4.2.3
       - name: Install Poetry and dependencies
         run: |
           poetry self add poetry-plugin-export
