fix(pyinstaller): Resolve Linux test dependency and Windows path issue
- Added libwebkit2gtk-4.1-0 to apt-get install in test-packaged-app.yml for Linux PyInstaller bundle test, resolving ImportError for libwebkit2gtk-4.1.so.0.
- Explicitly converted base_path to pathlib.Path object in db_manager.py to fix TypeError during path concatenation in Windows PyInstaller bundle.

--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -240,7 +240,7 @@ jobs:
       - name: Test Built Application (PyInstaller Linux)
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb libnotify4 libsdl2-2.0-0
+          sudo apt-get install -y xvfb libnotify4 libsdl2-2.0-0 libwebkit2gtk-4.1-0
           chmod +x ./build/ubuntu-latest/devildex_linux
           xvfb-run ./build/ubuntu-latest/devildex_linux &
           PID=$!
