--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -13,7 +13,7 @@ jobs:
       test_packages: ${{ steps.get_vars.outputs.test_packages }}
     steps:
       - id: get_vars
-        run: echo "test_packages=\"${{ vars.TEST_PACKAGES || '[\\"all\\\"]' }}\"" >> $GITHUB_OUTPUT
+        run: echo "test_packages='${{ format('{0}', toJson(vars.TEST_PACKAGES || '["all"]')) }}'" >> $GITHUB_OUTPUT # shellcheck disable=SC2086
 
   test-windows-pyinstaller-bundle:
     needs: setup
@@ -35,15 +35,15 @@ jobs:
 
       - name: Test Built Application (Windows)
         run: |
-          $process = Start-Process -FilePath ".\build\devildex_windows.exe" -NoNewWindow -PassThru
-          Start-Sleep -Seconds 30
-          if ($process.HasExited) {
-              Write-Error "Application exited prematurely."
-              exit 1
-          } else {
-              Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
-              Write-Host "Application remained running for 30 seconds."
-          }
+         $process = Start-Process -FilePath ".\\build\\devildex_windows.exe" -NoNewWindow -PassThru
+         Start-Sleep -Seconds 30
+         if ($process.HasExited) {
+             Write-Error "Application exited prematurely."
+             exit 1
+         } else {
+             Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
+             Write-Host "Application remained running for 30 seconds."
+         }
 
   test-macos-pyinstaller-bundle:
     needs: setup
@@ -65,17 +65,17 @@ jobs:
 
       - name: Test Built Application (macOS)
         run: |
-          chmod +x ./build/devildex_macos
-          ./build/devildex_macos &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
+         chmod +x ./build/devildex_macos
+         ./build/devildex_macos &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
 
   test-linux-debian-package:
     needs: setup
@@ -92,37 +92,42 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
 
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
       - name: List downloaded files (Linux)
         run: ls -R build/
 
       - name: Test Built Application (Linux)
         run: |
-          dpkg -c build/deb/*.deb
-          sudo apt-get update
-          sudo apt-get install -y xvfb libnotify4 ./build/deb/*.deb
-          echo "APT-GET install exit code: $?"
-          ls -l /usr/bin/devildex || true # Use || true to prevent the step from failing if devildex is not found yet
-          
-          # Find the devildex executable
-          DEVIDEX_PATH=$(find /usr/bin /usr/local/bin /opt -name devildex -type f -executable | head -n 1)
-          
-          if [ -z "$DEVIDEX_PATH" ]; then
-            echo "Error: devildex executable not found after Debian package installation."
-            exit 1
-          fi
-          
-          echo "Found devildex executable at: $DEVIDEX_PATH"
-          
-          xvfb-run "$DEVIDEX_PATH" &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
+         dpkg -c build/deb/*.deb
+         sudo apt-get update
+         sudo apt-get install -y xvfb libnotify4 ./build/deb/*.deb
+         echo "APT-GET install exit code: $?"
+         ls -l /usr/bin/devildex || true # Use || true to prevent the step from failing if devildex is not found yet
+         
+         # Find the devildex executable
+         DEVIDEX_PATH=$(find /usr/bin /usr/local/bin /opt -name devildex -type f -executable | head -n 1)
+         
+         if [ -z "$DEVIDEX_PATH" ]; then
+           echo "Error: devildex executable not found after Debian package installation."
+           exit 1
+         fi
+         
+         echo "Found devildex executable at: $DEVIDEX_PATH"
+         
+         xvfb-run "$DEVIDEX_PATH" &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
 
   test-linux-wheel-package:
     needs: setup
@@ -152,21 +157,20 @@ jobs:
 
       - name: Test Installed Wheel (Linux)
         run: |
-          pip list
-          ls -lR build/wheel
-          pip install ./build/wheel/devildex-*.whl alembic
-          pip install "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
-          xvfb-run devildex &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
-
+         pip list
+         ls -lR build/wheel
+         pip install ./build/wheel/devildex-*.whl alembic
+         pip install "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
+         xvfb-run devildex &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
 
 
   test-macos-wheel-package:
@@ -194,20 +198,20 @@ jobs:
 
       - name: Test Installed Wheel (macOS)
         run: |
-          pip list
-          ls -lR build/wheel
-          pip install ./build/wheel/devildex-*.whl alembic
-          pip install wxpython==4.2.3
-          devildex &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
+         pip list
+         ls -lR build/wheel
+         pip install ./build/wheel/devildex-*.whl alembic
+         pip install wxpython==4.2.3
+         devildex &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
 
   test-windows-wheel-package:
     needs: setup
@@ -234,16 +238,19 @@ jobs:
 
       - name: Test Installed Wheel (Windows)
         run: |
-          pip list
-          $process = Start-Process -FilePath "devildex.exe" -NoNewWindow -PassThru
-          Start-Sleep -Seconds 30
-          if ($process.HasExited) {
-              Write-Error "Application exited prematurely."
-              exit 1
-          } else {
-              Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
-              Write-Host "Application remained running for 30 seconds."
-          }
+         pip list
+         Get-ChildItem -Recurse build/wheel
+         pip install ./build/wheel/devildex-*.whl alembic
+         pip install wxpython==4.2.3
+         $process = Start-Process -FilePath "devildex.exe" -NoNewWindow -PassThru
+         Start-Sleep -Seconds 30
+         if ($process.HasExited) {
+             Write-Error "Application exited prematurely."
+             exit 1
+         } else {
+             Stop-Process -Id $process.Id -ErrorAction SilentlyContinue
+             Write-Host "Application remained running for 30 seconds."
+         }
 
   test-linux-pyinstaller-bundle:
     needs: setup
@@ -264,19 +271,19 @@ jobs:
 
       - name: Test Built Application (PyInstaller Linux)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb libnotify4 libsdl2-2.0-0 libwebkit2gtk-4.1-0
-          chmod +x ./build/ubuntu-latest/devildex_linux
-          xvfb-run ./build/ubuntu-latest/devildex_linux &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
+         sudo apt-get update
+         sudo apt-get install -y xvfb libnotify4 libsdl2-2.0-0 libwebkit2gtk-4.1-0
+         chmod +x ./build/ubuntu-latest/devildex_linux
+         xvfb-run ./build/ubuntu-latest/devildex_linux &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
 
   test-rpm-package:
     needs: setup
@@ -299,22 +306,22 @@ jobs:
 
       - name: Test Built Application (RPM)
         run: |
-          sudo dnf install -y xorg-x11-server-Xvfb libnotify
-          
-          # Install Python dependencies using pip
-          pip3 install toml pip-requirements-parser pdoc3 requests platformdirs poetry-core sqlalchemy pyyaml pydoctor fastapi uvicorn markdownify pyinstaller alembic
-          
-          # Install wxpython separately as it's a direct URL dependency
-          pip3 install "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
-          
-          sudo dnf install -y ./build/rpm/*.rpm
-          xvfb-run devildex &
-          PID=$!
-          sleep 30
-          if ps -p $PID > /dev/null; then
-              kill $PID
-              echo "Application remained running for 30 seconds."
-          else
-              echo "Application exited prematurely."
-              exit 1
-          fi
+         sudo dnf install -y xorg-x11-server-Xvfb libnotify
+         
+         # Install Python dependencies using pip
+         pip3 install toml pip-requirements-parser pdoc3 requests platformdirs poetry-core sqlalchemy pyyaml pydoctor fastapi uvicorn markdownify pyinstaller alembic
+         
+         # Install wxpython separately as it's a direct URL dependency
+         pip3 install "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp313-cp313-linux_x86_64.whl"
+         
+         sudo dnf install -y ./build/rpm/*.rpm
+         xvfb-run devildex &
+         PID=$!
+         sleep 30
+         if ps -p $PID > /dev/null; then
+             kill $PID
+             echo "Application remained running for 30 seconds."
+         else
+             echo "Application exited prematurely."
+             exit 1
+         fi
