fix(ci): Debug RPM artifact upload in build-and-release workflow
- Added a debug 'ls -R ~/rpmbuild/RPMS/' command to the 'Build RPM Package' job in build-and-release.yml.
- This will help diagnose why the RPM artifact is not being found for upload, by showing the actual contents of the RPM build directory.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -407,6 +407,7 @@ jobs:
         run: |
           VERSION=$(poetry version --short)
           rpmbuild -ba packaging/rpm/devildex.spec --define "version $VERSION"
+          ls -R ~/rpmbuild/RPMS/
       - name: Restore original pyproject.toml
         if: always()
         run: mv pyproject.toml.bak pyproject.toml
