fix(ci): Correct RPM artifact upload path in build-and-release workflow
- Updated the artifact upload path for RPM packages from 'noarch' to 'x86_64' in build-and-release.yml.
- This resolves the 'No files were found' error during RPM artifact upload, as the package is built for the x86_64 architecture.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -415,7 +415,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: devildex-rpm-package
-          path: ~/rpmbuild/RPMS/noarch/*.rpm
+          path: ~/rpmbuild/RPMS/x86_64/*.rpm
 
   check-build-status:
     runs-on: ubuntu-latest
