fix(deb): Ensure devildex executable is created in Debian package
- Added 'poetry install' to the 'Build Debian Package' job in build-and-release.yml.
- This ensures the Python package is properly installed in the build environment, allowing dh_python3 to create the '/usr/bin/devildex' executable symlink.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -170,6 +170,7 @@ jobs:
       - name: Build Debian package
         run: |
           cp -r packaging/debian .
+          poetry install
           dpkg-buildpackage -us -uc
           mkdir -p dist/deb
           mv ../*.deb dist/deb/
