fix(rpm): Install python3-pip in test-rpm-package job
- Added 'sudo dnf install -y python3-pip' to the 'Test RPM Package' job in test-packaged-app.yml.
- This ensures pip3 is available for installing Python dependencies within the fedora:latest container, resolving the 'pip3: command not found' error.

--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -306,8 +306,8 @@ jobs:
 
       - name: Test Built Application (RPM)
         run: |
-         sudo dnf install -y xorg-x11-server-Xvfb libnotify
-         
+                   sudo dnf install -y xorg-x11-server-Xvfb libnotify
+                   sudo dnf install -y python3-pip         
          # Install Python dependencies using pip
          pip3 install toml pip-requirements-parser pdoc3 requests platformdirs poetry-core sqlalchemy pyyaml pydoctor fastapi uvicorn markdownify pyinstaller alembic
          
