--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "markdownify (>=1.2.0,<2.0.0)",
-    "pyinstaller (>=6.16.0,<7.0.0)",
     "alembic (>=1.13.1,<2.0.0)",
 ]
 
@@ -37,6 +36,7 @@ packages = [
 
 nuitka = "^2.7.16"
 pyoxidizer = "^0.24.0"
+pyinstaller = "^6.16.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.1"
@@ -60,9 +60,6 @@ sphinx-copybutton = "^0.5.2"
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.13.3"
 black = "^25.9.0"
-
-
-[tool.poetry.group.dev.dependencies]
 
 
 [project.scripts]
