--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "pdoc3 (>=0.11.6,<0.12.0)",
     "requests (>=2.32.4,<3.0.0)",
     "platformdirs (>=3.0.0,<5.0.0)",
-    "poetry-core (>=2.0.0,<3.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
     "pydoctor (>=25.4.0,<26.0.0)",
@@ -37,6 +36,7 @@ packages = [
 nuitka = "^2.7.16"
 pyoxidizer = "^0.24.0"
 pyinstaller = "^6.16.0"
+poetry-core = "^2.2.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.1"
