--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -5,8 +5,7 @@
 %:
 	dh $@ --with python3
 
-override_dh_auto_build:
-	# Do nothing to prevent dh_auto_build from calling make
-
-override_dh_auto_clean:
-	# Do nothing to prevent dh_auto_clean from calling make distclean
+override_dh_auto_install:
+	dh_auto_install
+	poetry build --format wheel
+	pip install --prefix=$(CURDIR)/debian/devildex/usr dist/*.whl
