--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -310,7 +310,7 @@ jobs:
           sudo dnf install -y ./build/rpm/*.rpm
           # Install Python dependencies using pip
           pip3 install toml pip-requirements-parser pdoc3 requests platformdirs poetry-core sqlalchemy pyyaml pydoctor fastapi uvicorn markdownify pyinstaller alembic
-          xvfb-run devildex &
+          PYTHONPATH=/usr/local/lib/python3.13/site-packages xvfb-run devildex &
           PID=$!
           sleep 30
           if ps -p $PID > /dev/null; then
