feat(rpm): Consolidate Python dependencies in RPM spec and remove external pip installs from workflow

--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -308,8 +308,7 @@ jobs:
           sudo dnf install -y xorg-x11-server-Xvfb libnotify procps-ng
           sudo dnf install -y python3-pip
           sudo dnf install -y ./build/rpm/*.rpm
-          # Install Python dependencies using pip
-          pip3 install toml pip-requirements-parser pdoc3 requests platformdirs poetry-core sqlalchemy pyyaml pydoctor fastapi uvicorn markdownify pyinstaller alembic
+          # All Python dependencies are now handled by RPM Requires or the %post scriptlet.
           PYTHONPATH=/usr/local/lib/python3.13/site-packages xvfb-run devildex &
           PID=$!
           sleep 30
