Revert: Remove libnotify-dev from Build-Depends in debian control file and ignore workflow_logs

--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,1 @@
-build
-devildex_dev.db
-dist
-main.build
-rtd*
-docset
-megalinter-reports/
-__pycache__
-out
-GEMINI.md
-
-# Test artifacts
-*.coverage
-coverage.xml
-coverage_full_run.xml
-test-results.xml
-test_report/
-coverage.json
-coverage_reports/
-
-# IDE files
-.idea/coverage_reports/
-gemini/
-tools/
-.env
-git_push_all.sh
-github.log
-.pytest_temp_logs/
-job_*.zip
-
-# Private tools and scripts
-private_tools/
+workflow_logs/
