--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -5,6 +5,7 @@ Maintainer: magowiz <magowiz@gmail.com>
 Build-Depends: debhelper-compat (= 13), python3-all, python3-setuptools, python3-wheel, python3-poetry-core, python3-pip
 Standards-Version: 4.6.0
 Homepage: https://github.com/magowiz/devildex
+X-Python3-Version: >= 3.11
 Vcs-Browser: https://github.com/magowiz/devildex
 Vcs-Git: https://github.com/magowiz/devildex.git
 
