--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -11,7 +11,7 @@ Vcs-Git: https://github.com/magowiz/devildex.git
 
 Package: devildex
 Architecture: all
-Depends: ${python3:Depends}, ${misc:Depends}, python3-wxgtk4.0, python3-wxgtk-webview4.0, libnotify4, libsdl2-2.0-0, python3-toml, python3-requests, python3-platformdirs, python3-sqlalchemy, python3-yaml, python3-fastapi, python3-uvicorn, python3-alembic, python3-typing-extensions
+Depends: ${python3:Depends}, ${misc:Depends}, python3-wxgtk4.0, python3-wxgtk-webview4.0, libnotify4, libsdl2-2.0-0, python3-toml, python3-requests, python3-platformdirs, python3-sqlalchemy (>= 2.0.0), python3-yaml, python3-fastapi, python3-uvicorn, python3-alembic, python3-typing-extensions
 Description: A desktop application for discovering, generating, and viewing Python package documentation.
  DevilDex scans your projects for dependencies, builds their documentation,
  and provides a unified interface to browse it all locally.
