--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -471,6 +471,14 @@ jobs:
         env:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
+          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+          RELEASE_VERSION=$(echo "$COMMIT_MESSAGE" | grep -oP 'release\((\d+\.\d+\.\d+)\)' | sed -E 's/release\((.*)\)/\1/')
+          if [[ -n "$RELEASE_VERSION" ]]; then
+            echo "Extracted version from commit message: $RELEASE_VERSION"
+            echo "next_version=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
           RELEASE_TYPE=$(echo "$COMMIT_MESSAGE" | grep -oP 'release\(\K(patch|minor|major)(?=\)\:)' | head -1)
           if [[ -z "$RELEASE_TYPE" ]]; then
             echo "No release type found. Skipping release."
