--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -13,7 +13,7 @@ jobs:
       test_packages: ${{ steps.get_vars.outputs.test_packages }}
     steps:
       - id: get_vars
-        run: echo "test_packages='${{ format('{0}', toJson(vars.TEST_PACKAGES || '["all"]')) }}'" >> $GITHUB_OUTPUT # shellcheck disable=SC2086
+        run: echo "test_packages='${{ vars.TEST_PACKAGES || '[\"all\"]' }}'" >> $GITHUB_OUTPUT
 
   test-windows-pyinstaller-bundle:
     needs: setup
